--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,15 +10,21 @@
     <!-- add meta tags for favicons, facebook og, and analytics -->
 </head>
 <body>
-    <h1>Melissa Wheatley — Nashville User Experience Developer</h1>
-    <h2>Front End Web Development | Interaction Design | Digital & Social Media Marketing </h2>
+    <header>
+        <h1>Melissa Wheatley</h1>
+        <p>Nashville Front End Web Developer and User Experience Designer</p>
+    </header>
     
+    <section>
+        <h2 style="text-align: center;">Front End Web Development  |  Interaction Design  |  Digital & Social Media Marketing </h2>
+    </section>
+
     <section class="jobs">
 
     <h3>Experience</h3>
     <article>
-            <p><strong>User Experience and Front End Web Development Apprentice</strong></p>
-            <p><a href="http://nashvillesoftwareschool.com/programs/20180102fewddb01/" target="_blank"></a><em>Nashville Software School</em></a>  |  <em>January 2018 - present</em></p>
+            <p><strong>User Experience and Front End Web Development Apprentice</strong><br />
+                <a href="http://nashvillesoftwareschool.com/programs/20180102fewddb01/" target="_blank"></a><em>Nashville Software School</em></a>  |  <em>January 2018 - present</em></p>
             <ul>
                 <li>placeholder item one</li>
                 <li>placeholder item two</li>
@@ -28,8 +34,7 @@
         </article>
 
         <article>
-                <p><strong>Web Content Manager</strong></p>
-                <p><a href="https://umcdiscipleshp.org/" target="_blank"><em>Discipleship Ministries of the United Methodist Church</em></a>  |  <em>September 2015 - December 2017</em></p>
+                <p><strong>Web Content Manager</strong><br /><a href="https://umcdiscipleshp.org/" target="_blank"><em>Discipleship Ministries of the United Methodist Church</em></a>  |  <em>September 2015 - December 2017</em></p>
                 <ul>
                     <li>placeholder item one</li>
                     <li>placeholder item two</li>
@@ -39,8 +44,7 @@
             </article>
 
             <article>
-                    <p><strong>Digital Marketing Manager</strong></p>
-                    <p><a href="http://www.financialmarketingsolutions.com/" target="_blank"><em>Financial Marketing Solutions</em></a>  |  <em>January 2018 - present</em></p>
+                    <p><strong>Digital Marketing Manager</strong><br /><a href="http://www.financialmarketingsolutions.com/" target="_blank"><em>Financial Marketing Solutions</em></a>  |  <em>January 2018 - present</em></p>
                     <ul>
                         <li>placeholder item one</li>
                         <li>placeholder item two</li>
