first week blog

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     
     <section>
-        <h2 style="text-align: center;">Front End Web Development  |  Interaction Design  |  Social Media Marketing </h2>
+        <h2 style="text-align: center;">Web Development  |  Interaction Design  |  Social Media Marketing </h2>
     </section>
 
     <section class="jobs">
